// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should addToTotal should create ADD_TO_TOTAL action with value as payload 1`] = `
Object {
  "payload": 12,
  "type": "ADD_TO_TOTAL",
}
`;

exports[`actions should multiplyTotal should create MULTIPLY_TOTAL action with value as payload 1`] = `
Object {
  "payload": 12,
  "type": "MULTIPLY_TOTAL",
}
`;

exports[`actions should setTotal should create SET_TOTAL action 1`] = `
Object {
  "payload": 3,
  "type": "SET_TOTAL",
}
`;
